# angi

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: gh-pages.yml  test.yml
angi/: Cargo.toml  build.rs
angi-archive/: Cargo.toml
angi-archive/src/: lib.rs
angi-compiler/: Cargo.toml  build.rs
angi-compiler/src/: lib.rs
angi-compiler/tests/: ast.rs  compiler.rs  lexing.rs
angi-ins/: Cargo.toml
angi-ins/src/: lib.rs  macros.rs
angi-ins/tests/: instructions.rs
angi-modules/: Cargo.toml
angi-modules/src/: lib.rs
angi-modules/template/: Cargo.toml
angi-repl/: Cargo.toml
angi-repl/src/: main.rs
angi-runtime/: Cargo.toml
angi-runtime/src/: constant.rs  error.rs  function.rs  lib.rs  register.rs  tree.rs  value.rs  vm.rs
angi-runtime/src/modules/: error.rs  mod.rs
angi-runtime/src/modules/template/: mod.rs
angi-runtime/src/value/: table.rs
angi-server/: Cargo.toml
angi-server/src/: logger.rs  main.rs  utils.rs
angi-utils/: Cargo.toml
angi-utils/src/: lib.rs  read_from_buf_reader.rs  read_ins.rs
angi/native_lib/: global.ag
architecture/: bytecode.html
archive/: Cargo.toml
compiler/: Cargo.toml
example/: main.ag  test.ag
examples/: advance.ag  advance2.ag  bussiness.ag  function.ag  import.ag  interpolation.ag  main.ag  main.arc  main.bc  main.type.ag  member.ag  table.ag  test.ag  test.bc  types.ag
instructions/: Cargo.toml
introduction/: what-is-angi.html
native_lib/: global.ag
server/: Cargo.toml
shared_utils/: Cargo.toml
vm/: Cargo.toml
(+104 files in other folders)
