[package]
name = "angi-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]

angi-ins = { path = "../angi-ins" }
angi-archive = { path = "../angi-archive" }
angi-utils = { path = "../angi-utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = "2.19.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

